Fix bug where search bar would wrap on small screens

--- a/project/static/css/styles.css
+++ b/project/static/css/styles.css
@@ -49,7 +49,7 @@ textarea {
 }
 
 #query {
-    min-width: 195px;
+    width: 100%;
 }
 
 #locationInput {
